# MpqSimpleIO

./: .gitignore  CMakeLists.txt  MpqSimpleIO.qbs  README.md  main.cpp
